--- a/views/partials/restaurant-card.handlebars
+++ b/views/partials/restaurant-card.handlebars
@@ -5,7 +5,7 @@
     <h3> {{name}} </h3>
     </a>  
     <div class="rounded p-2" style="background-color: #FFE5B4;">
-    <p>Bio: {{bio}}</p>
+    <p>About Us:  {{bio}}</p>
     <p>Location: {{location}}</p>
     <p>Website: <a href="{{website}}">{{website}}</a></p>
     <p>Average Rating: {{restaurantRating}}</p>
