--- a/views/partials/restaurant-dash-card.handlebars
+++ b/views/partials/restaurant-dash-card.handlebars
@@ -6,7 +6,7 @@
     <!--Turn The card into a link that we can click to access indivdually-->
     <a class = "text-decoration-none text-dark" href="/restaurant/{{id}}"><h3>{{name}}</h3></a>
     <div class="rounded p-2" style="background-color: #FFE5B4;"> 
-    <p>Bio: {{bio}}</p>
+    <p>About Us:  {{bio}}</p>
     <p>Location: {{location}}</p>
     <p>Website: <a href="{{website}}">{{website}}</a></p>
     <p>Average Rating: {{restaurantRating}}</p>
